fix: scroll butoon on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,7 @@ body.simple-modal-open {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: top 400ms ease-out;
 }
 
 #scroll-down-button-container svg {
